@@ -11,3 +11,8 @@ CREATE TABLE releases (
   CHARACTER SET 'utf8',
   COMMENT 'Sqitch registry releases.'
 ;
+
+-- Add the script_hash column to the changes table. Copy change_id for now.
+ALTER TABLE changes ADD COLUMN script_hash VARCHAR(40);
+UPDATE changes SET script_hash = change_id;
+ALTER TABLE changes MODIFY script_hash VARCHAR(40) NOT NULL UNIQUE;
