@@ -10,3 +10,9 @@ COMMENT ON COLUMN &registry..releases.version         IS 'Version of the Sqitch 
 COMMENT ON COLUMN &registry..releases.installed_at    IS 'Date the registry release was installed.';
 COMMENT ON COLUMN &registry..releases.installer_name  IS 'Name of the user who installed the registry release.';
 COMMENT ON COLUMN &registry..releases.installer_email IS 'Email address of the user who installed the registry release.';
+
+-- Add the script_hash column to the changes table. Copy change_id for now.
+ALTER TABLE &registry..changes ADD script_hash CHAR(40);
+UPDATE &registry..changes SET script_hash = change_id;
+ALTER TABLE &registry..changes MODIFY (script_hash NOT NULL UNIQUE);
+COMMENT ON COLUMN &registry..changes.script_hash IS 'Deploy script SHA-1 hash.';
