@@ -76,7 +76,6 @@ UPDATE RDB$RELATION_FIELDS
 
 CREATE TABLE changes (
     change_id       VARCHAR(40)   NOT NULL PRIMARY KEY,
-    script_hash     VARCHAR(40)   NOT NULL UNIQUE,
     change          VARCHAR(255)  NOT NULL,
     project         VARCHAR(255)  NOT NULL REFERENCES projects(project)
                                        ON UPDATE CASCADE,
@@ -98,10 +97,6 @@ UPDATE RDB$RELATIONS SET
 UPDATE RDB$RELATION_FIELDS
     SET RDB$DESCRIPTION = 'Change primary key.'
     WHERE RDB$RELATION_NAME = 'CHANGES' AND RDB$FIELD_NAME = 'CHANGE_ID';
-
-UPDATE RDB$RELATION_FIELDS
-    SET RDB$DESCRIPTION = 'Deploy script SHA-1 hash.'
-    WHERE RDB$RELATION_NAME = 'CHANGES' AND RDB$FIELD_NAME = 'SCRIPT_HASH';
 
 UPDATE RDB$RELATION_FIELDS
     SET RDB$DESCRIPTION = 'Name of a deployed change.'
