@@ -28,7 +28,6 @@ COMMENT ON COLUMN &registry..projects.creator_email  IS 'Email address of the us
 
 CREATE TABLE &registry..changes (
     change_id       CHAR(40)                 PRIMARY KEY,
-    script_hash     CHAR(40)                 NOT NULL UNIQUE,
     change          VARCHAR2(512 CHAR)       NOT NULL,
     project         VARCHAR2(512 CHAR)       NOT NULL REFERENCES &registry..projects(project),
     note            VARCHAR2(4000 CHAR)      DEFAULT '',
@@ -42,7 +41,6 @@ CREATE TABLE &registry..changes (
 
 COMMENT ON TABLE  &registry..changes                 IS 'Tracks the changes currently deployed to the database.';
 COMMENT ON COLUMN &registry..changes.change_id       IS 'Change primary key.';
-COMMENT ON COLUMN &registry..changes.script_hash     IS 'Deploy script SHA-1 hash.';
 COMMENT ON COLUMN &registry..changes.change          IS 'Name of a deployed change.';
 COMMENT ON COLUMN &registry..changes.project         IS 'Name of the Sqitch project to which the change belongs.';
 COMMENT ON COLUMN &registry..changes.note            IS 'Description of the change.';
